Remove last fix for the privacy policy overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,10 +30,6 @@ html  {
     scroll-padding-top: 120px;
 }
 
-body {
-    overflow: hidden;
-}
-
 a {
     text-decoration: none;
 }
